--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Assessing the Impact and Potential of TTS for Pathological Voice Data Augmentation on Pathology Detection Systems</title>
-    <!-- Fuentes de Google -->
+    <!-- Fuentes de Google #f4f7fa; #2c3e50; -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- CSS para estilo -->
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f4f7fa;
+            background-color:  #fef5e7; 
             margin: 0;
             padding: 0;
             display: flex;
@@ -20,9 +20,16 @@
             justify-content: center;
         }
         header {
-            background-color: #2c3e50;
+            background-color: #fdf2e9; 
             color: white;
             padding: 20px;
+            width: 100%;
+            text-align: center;
+        }
+        subheader {
+            background-color: #fdebd0; 
+            color: white;
+            padding: 15px;
             width: 100%;
             text-align: center;
         }
@@ -116,10 +123,15 @@
         <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Unizar.png" alt="Logo Universidad" class="logo">
         <h1>Assessing the Impact and Potential of TTS for Pathological Voice Data Augmentation on Pathology Detection Systems</h1>
         <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Vivolab.png" alt="Logo Grupo Investigación" class="logo">
-        <br>
-        <h2> Authors </h2> <p> Santiago Rubio Felipo, Dayana Ribas González, Eduardo Lleida Solano, Alfonso Ortega Giménez and Antonio Miguel Artiaga </p>
     </div>
 </header>
+<header>
+    <div class="logo-container">
+        <h2>Authors:</h2> <p>Santiago Rubio Felipo, Dayana Ribas González, Eduardo Lleida Solano, Alfonso Ortega Giménez and Antonio Miguel Artiaga </p>
+    </div>
+</header>
+    
+    
 
 <div class="container">
     <table>
