--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             justify-content: center;
         }
         header {
-            background-color: #fdf2e9; 
+            background-color: #ca6f1e; 
             color: white;
             padding: 20px;
             width: 100%;
             text-align: center;
         }
         subheader {
-            background-color: #fdebd0; 
+            background-color: #f39c12; 
             color: white;
             padding: 15px;
             width: 100%;
