--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 </header>
 <header>
     <div class="logo-container">
-        <h2>Authors:</h2> <p>Santiago Rubio Felipo, Dayana Ribas González, Eduardo Lleida Solano, Alfonso Ortega Giménez and Antonio Miguel Artiaga </p>
+        <h2>Authors:</h2> <br>
+        <p>Santiago Rubio Felipo, Dayana Ribas González, Eduardo Lleida Solano, Alfonso Ortega Giménez and Antonio Miguel Artiaga </p>
     </div>
 </header>
     
