--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </tr>
         <tr>
             <td>
-                <select id="experimentSelect">
+                <select id="showCategory">
                     <option value="Exp1">Experiment 1</option>
                     <option value="Exp2">Experiment 2</option>
                     <option value="Exp3">Experiment 3</option>
