--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             const firstStepsUrl = `${baseUrl}${experiment}/${experiment}_first_steps.html`;
             const finalStepsUrl = `${baseUrl}${experiment}/${experiment}_final_steps.html`;
             // Cargar las dos URLs
+            console.log(firstStepsUrl, finalStepsUrl);
             loadContent(firstStepsUrl, finalStepsUrl);
         
             // Cambiar las URLs de los audios
