--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Assessing the Impact and Potential of TTS for Pathological Voice Data Augmentation on Pathology Detection Systems</title>
     <!-- Fuentes de Google #f4f7fa; #2c3e50; -->
+     <link rel="icon" href="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- CSS para estilo -->
     <style>
