--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </tr>
         <tr>
             <td>
-                <select id="showCategory">
+                <select id="showCategory", onchange="showCategory(this.value)">
                     <option value="Choose">Choose Experiment</option>
                     <option value="Exp1">Experiment 1</option>
                     <option value="Exp2">Experiment 2</option>
