--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             text-align: center;
         }
         subheader {
-            background-color: #aed6f1; 
+            background-color:  #d4e6f1; 
             color: white;
             padding: 15px;
             width: 100%;
