--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
             text-align: center;
         }
         subheader {
-            background-color:  #d4e6f1; 
+            background-color: #cfd8dc; 
             color: white;
             padding: 15px;
             width: 100%;
-            text-align: center;
         }
         h1 {
             margin: 0;
