--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             text-align: center;
         }
         subheader {
-            background-color: #cfd8dc; 
+            background-color:  #85929e; 
             color: white;
             padding: 15px;
             width: 100%;
