--- a/index.html
+++ b/index.html
@@ -127,15 +127,16 @@
     <div class="logo-container">
         <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Unizar.png" alt="Logo Universidad" class="logo">
         <h2>Authors:</h2> <br>
-        <p>Santiago Rubio Felipo, Dayana Ribas González, Eduardo Lleida Solano, Alfonso Ortega Giménez and Antonio Miguel Artiaga </p>
+        
         <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Vivolab.png" alt="Logo Grupo Investigación" class="logo">
     </div>
+    <p>Santiago Rubio Felipo, Dayana Ribas González, Eduardo Lleida Solano, Alfonso Ortega Giménez and Antonio Miguel Artiaga </p>
 </subheader>
 <subheader>
-<div class="logo-container">
+    <div class="logo-container">
         <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Iberspeech.png" alt="Logo Universidad" class="logo">
-        <h2> IberSPEECH 2024, Aveiro, Portugal. XIII Jornadas en Tecnologías del Habla and the VI Iberian SLTech. </h2>
     </div>
+    <h2> <center>IberSPEECH 2024, Aveiro, Portugal. XIII Jornadas en Tecnologías del Habla and the VI Iberian SLTech. </center></h2><br>
     <p><center>11/11/2024-13/11/2024</center></p>
     
 </subheader>
