--- a/index.html
+++ b/index.html
@@ -130,13 +130,14 @@
         
         <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Vivolab.png" alt="Logo Grupo Investigación" class="logo">
     </div>
-    <p>Santiago Rubio Felipo, Dayana Ribas González, Eduardo Lleida Solano, Alfonso Ortega Giménez and Antonio Miguel Artiaga </p>
+    <p><center>Santiago Rubio Felipo, Dayana Ribas González, Eduardo Lleida Solano, Alfonso Ortega Giménez and Antonio Miguel Artiaga </center> </p>
 </subheader>
 <subheader>
     <div class="logo-container">
         <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Iberspeech.png" alt="Logo Universidad" class="logo">
+        <h2> <center>IberSPEECH 2024, Aveiro, Portugal. XIII Jornadas en Tecnologías del Habla and the VI Iberian SLTech. </center></h2>
     </div>
-    <h2> <center>IberSPEECH 2024, Aveiro, Portugal. XIII Jornadas en Tecnologías del Habla and the VI Iberian SLTech. </center></h2><br>
+   
     <p><center>11/11/2024-13/11/2024</center></p>
     
 </subheader>
