--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         .audio-player {
             display: flex;
             justify-content: space-between;
-            align-items: center;
-            gap: 50px;
+            align-items: flex-start;
+            gap: 30px;
         }
 
         .player-box {
@@ -147,6 +147,14 @@
             font-weight: bold;
             color: #555;
             margin-bottom: 10px;
+        }
+
+        .fake-audios {
+            margin-top: 20px;
+        }
+
+        .fake-audio-item {
+            margin-bottom: 15px;
         }
     </style>
 </head>
@@ -174,9 +182,11 @@
     <p>11/11/2024-13/11/2024</p>
     
 </subheader>
-<div class="container">
-        <h2>TTS Data Augmentation</h2>
+<body>
+    <div class="container">
+        <h1>Audio Comparison Player</h1>
         <div class="audio-player">
+            <!-- Original Audio -->
             <div class="player-box">
                 <div class="label">Original Audio</div>
                 <audio controls>
@@ -184,20 +194,49 @@
                     Your browser does not support the audio element.
                 </audio>
             </div>
+
+            <!-- Fake Audios -->
             <div class="player-box">
-                <div class="label">Fake Audio</div>
-                <audio controls>
-                    <source src="https://santirf01.github.io/TFG_TTS_page.io/Thalento/Audios/TVD-D-0001/TVD-D-0001_0001.wav" type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
+                <div class="label">Fake Audios</div>
+
+                <!-- Fake Audio List -->
+                <div class="fake-audios">
+                    <div class="fake-audio-item">
+                        <div class="label">Fake Audio 1</div>
+                        <audio controls>
+                            <source src="https://santirf01.github.io/TFG_TTS_page.io/Thalento/Audios/TVD-D-0001/TVD-D-0001_0001.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+
+                    <div class="fake-audio-item">
+                        <div class="label">Fake Audio 2</div>
+                        <audio controls>
+                            <source src="https://santirf01.github.io/TFG_TTS_page.io/Thalento/Audios/TVD-D-0001/TVD-D-0001_0002.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+
+                    <div class="fake-audio-item">
+                        <div class="label">Fake Audio 3</div>
+                        <audio controls>
+                            <source src="https://santirf01.github.io/TFG_TTS_page.io/Thalento/Audios/TVD-D-0001/TVD-D-0001_0003.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+
+                    <!-- Añade más audios aquí -->
+                </div>
             </div>
         </div>
     </div>
 
 <div class="container">
+    <h2>Automatic Voice Disorder Detection</h2><br>
+    
     <table>
         <tr>
-            <th colspan="2">Choose Experiment</th>
+            <th colspan="2">UMAP SS Representation</th>
         </tr>
         <tr>
             <td>
