--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
         .fake-audio-item {
             margin-bottom: 15px;
         }
+         select {
+            font-size: 16px;
+            padding: 5px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -184,6 +189,22 @@
 </subheader>
 <body>
     <div class="container">
+        <label for="speaker-select">Select Speaker:</label>
+        <select id="speaker-select">
+            <option value="TVD-D-0001">TVD-D-0001</option>
+            <option value="TVD-D-0002">TVD-D-0002</option>
+            <option value="TVD-D-0003">TVD-D-0003</option>
+            <option value="TVD-D-0005">TVD-D-0005</option>
+            <option value="TVD-D-0006">TVD-D-0006</option>
+            <option value="TVD-D-0007">TVD-D-0007</option>
+            <option value="TVD-D-0008">TVD-D-0008</option>
+            <option value="TVD-D-0009">TVD-D-0009</option>
+            <option value="TVD-D-0010">TVD-D-0010</option>
+            <option value="TVD-D-0011">TVD-D-0011</option>
+            <option value="TVD-D-0012">TVD-D-0012</option>
+            <option value="TVD-D-0013">TVD-D-0013</option>
+            <!-- Add more speakers here -->
+        </select>
         <h1>Audio Comparison Player</h1>
         <div class="audio-player">
             <!-- Original Audio -->
@@ -321,7 +342,33 @@
             // document.getElementById('audioOriginal').src = `audios/${experiment.toLowerCase()}_original.mp3`;
             // document.getElementById('audioFake').src = `audios/${experiment.toLowerCase()}_fake.mp3`;
         }
+    
+        function updateAudioSources(speaker) {
+            // Update original audio source
+            const originalAudio = document.getElementById("original-audio");
+            originalAudio.src = `https://santirf01.github.io/TFG_TTS_page.io/Thalento/Audios_Originales/${speaker}_D8_LECTURA.wav`;
+            originalAudio.load();
 
+            // Update fake audio sources
+            const fakeAudio1 = document.getElementById("fake-audio-1");
+            fakeAudio1.src = `https://santirf01.github.io/TFG_TTS_page.io/Thalento/Audios/${speaker}/${speaker}_0001.wav`;
+            fakeAudio1.load();
+
+            const fakeAudio2 = document.getElementById("fake-audio-2");
+            fakeAudio2.src = `https://santirf01.github.io/TFG_TTS_page.io/Thalento/Audios/${speaker}/${speaker}_0002.wav`;
+            fakeAudio2.load();
+
+            const fakeAudio3 = document.getElementById("fake-audio-3");
+            fakeAudio3.src = `https://santirf01.github.io/TFG_TTS_page.io/Thalento/Audios/${speaker}/${speaker}_0003.wav`;
+            fakeAudio3.load();
+        }
+
+        // Event listener for speaker selection change
+        const speakerSelect = document.getElementById("speaker-select");
+        speakerSelect.addEventListener("change", (event) => {
+            const selectedSpeaker = event.target.value;
+            updateAudioSources(selectedSpeaker);
+        });
 
     
     </script>
