--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <h2>TTS Data Augmentation</h2>
     <div class="container">
         <label_audio for="speaker-select">Select Speaker:</label_audio>
-        <select id="speaker-select" onchange="changeSpeaker()">
+        <select id="speaker-select" onchange="updateSpeaker()">
             <option value="TVD-D-0001">TVD-D-0001</option>
             <option value="TVD-D-0002">TVD-D-0002</option>
             <option value="TVD-D-0003">TVD-D-0003</option>
