--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 </footer>
     
 <!-- Script para cambiar las imágenes y los audios según el experimento seleccionado -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+<script>
     
         var secondSelectCreated = false;
 
