--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 <div class="container">
     <label_audio for="speaker-select">Select Speaker:</label_audio>
     <select id="speaker-select">
-        <option value="TVD-D-0001">TVD-D-0001</option>
+        <!-- <option value="TVD-D-0001">TVD-D-0001</option>
         <option value="TVD-D-0002">TVD-D-0002</option>
         <option value="TVD-D-0003">TVD-D-0003</option>
         <option value="TVD-D-0005">TVD-D-0005</option>
@@ -214,7 +214,7 @@
         <option value="TVD-D-0010">TVD-D-0010</option>
         <option value="TVD-D-0011">TVD-D-0011</option>
         <option value="TVD-D-0012">TVD-D-0012</option>
-        <option value="TVD-D-0013">TVD-D-0013</option>
+        <option value="TVD-D-0013">TVD-D-0013</option>-->
         <!-- Add more speakers here -->
     </select>
     
