--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             margin-bottom: 20px;
         }
         .label_audio {
-            font-size: 14px;
+            font-size: 16px;
             color: #4a90e2;
             margin-bottom: 5px;
         }
@@ -285,6 +285,10 @@
                     <option value="Exp7">Experiment 7</option>
                 </select>
             </td>
+        </tr>
+        <tr>
+            <td><h3><center>First steps</center></h3></td>
+            <td><h3><center>Final steps</center></h3></td>
         </tr>
         <tr>
             <td colspan="2">
