--- a/index.html
+++ b/index.html
@@ -270,9 +270,7 @@
     
     <table>
         <tr>
-            <th colspan="2">UMAP SS Representation</th>
-        </tr>
-        <tr>
+            <th>UMAP SS Representation</th>
             <td>
                 <select id="showCategory" onchange="showCategory(this.value)">
                     <option value="Choose">Choose Experiment</option>
