--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         const stepNumber = document.getElementById('step-number');
 
         function loadContent_steps_image(url1, url2) {
-            var contenidoDiv = document.getElementById("contenido");
+            var contenidoDiv = document.getElementById("contenido_steps");
             if (url1 && url2) {
                 contenidoDiv.innerHTML = `
                     <div class="image-container">
