--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             updateAudioSources(document.getElementById("speaker-select").value);
             updateSpeaker(document.getElementById("speaker-select").value);
             const initialStep = slider.value;
-            const step_image1 = `${baseUrl}step${initialStep}_labels_speaker.html`;
+            const step_image1 = `${baseUrl}step${initialStep}_labels_audio.html`;
             const step_image2 = `${baseUrl}step${initialStep}_labels_speaker.html`;
             loadContent_steps_image(step_image1, step_image2);
         };
