--- a/index.html
+++ b/index.html
@@ -309,7 +309,19 @@
     
      <table>
         <tr>
-            <th colspan="2">Test UMAP SS Representation Evolution </th>
+            <th>Test UMAP SS Representation Evolution </th>
+            <td>
+                <select id="showCategory" onchange="showCategory(this.value)">
+                    <option value="Choose">Choose Experiment</option>
+                    <!--<option value="Exp1">Experiment 1</option>
+                    <option value="Exp2">Experiment 2</option>
+                    <option value="Exp3">Experiment 3</option>
+                    <option value="Exp4">Experiment 4</option>-->
+                    <option value="Exp5">Experiment 5</option>
+                    <option value="Exp6">Experiment 6</option>
+                    <option value="Exp7">Experiment 7</option>
+                </select>
+            </td>
         </tr>
         <tr>
             <td><h3><center>UMAP by Audio</center></h3></td>
