--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <span id="step-number">6000</span>
 </div>
 <footer>
-    <p>&copy; 2024 Dashboard Elegante. Todos los derechos reservados.</p>
+     <p>&copy; IberSPEECH 2024.Assessing the Impact and Potential of TTS for Pathological Voice Data Augmentation on Pathology Detection Systems.</p>
 </footer>
     
 <!-- Script para cambiar las imágenes y los audios según el experimento seleccionado -->
