--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             stepNumber.textContent = step;
                 // Verifica si se ha seleccionado un experimento
             const experiment = document.getElementById('showCategory').value;
-            
+            console.log(experiment);
             if (experiment === "Choose") {
                 console.log("Please select an experiment first.");
                 return; // Si no se ha seleccionado un experimento, no continúes.
