--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <tr>
             <th>Test UMAP SS Representation Evolution </th>
             <td>
-                <select id="act_fold" onchange="choose_fold(this.value,document.getElementById('showCategory').value))">
+                <select id="act_fold" onchange="choose_fold(this.value,document.getElementById('showCategory').value)">
                     <option value="Choose"> Choose fold</option>
                     <option value="Fold1">Fold 1</option>
                     <option value="Fold2">Fold 2</option>
