--- a/index.html
+++ b/index.html
@@ -116,27 +116,24 @@ footer p {
         </div>
     </div>
 
-    <footer>
+    <!--<footer>
         <p>Created with <i class="fas fa-heart"></i> by Your Name</p>
-    </footer>
+    </footer>-->
 
     <script src="scripts/app.js"></script>
 </body>
 
 <script>
-// Función para cargar la lista de archivos .txt de la carpeta "data"
+    // Función para cargar la lista de experimentos (carpetas) y actualizar el selector
 async function loadExperimentList() {
-    const response = await fetch('https://github.com/santirf01/Data_logger/blob/main/');
-    const text = await response.text();
-    const parser = new DOMParser();
-    const doc = parser.parseFromString(text, 'text/html');
-    const fileList = Array.from(doc.querySelectorAll('a')).map(link => link.href).filter(file => file.endsWith('.txt'));
+    // Array manual con los nombres de las carpetas de experimentos
+    const experimentFolders = ['18-10-2024_11-46_exp_LSTM_IMDB_32_10']; // Sustituye estos nombres por los de tus carpetas
 
     const select = document.getElementById('experiment-select');
-    fileList.forEach(file => {
+    experimentFolders.forEach(folder => {
         const option = document.createElement('option');
-        option.value = file;
-        option.textContent = file.replace('data/', '').replace('.txt', '');
+        option.value = `data/${folder}/train.txt`;
+        option.textContent = folder;
         select.appendChild(option);
     });
 }
@@ -155,7 +152,7 @@ async function loadExperimentData() {
     }
 }
 
-// Función para convertir el contenido del archivo .txt a un formato entendible
+// Función para convertir el contenido del archivo results.txt a un formato entendible
 function parseExperimentData(data) {
     const lines = data.split('\n');
     const legend = lines[0].trim();
@@ -193,6 +190,8 @@ function plotData({ legend, xValues, yValues }) {
 
 // Inicializa el listado de experimentos cuando la página carga
 document.addEventListener('DOMContentLoaded', loadExperimentList);
+
+
 </script>
 </html>
 
