--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ footer p {
     // Función para cargar la lista de experimentos (carpetas) y actualizar el selector
 async function loadExperimentList() {
     // Array manual con los nombres de las carpetas de experimentos
-    const experimentFolders = ['18-10-2024_11-46_exp_LSTM_IMDB_32_10', '18-10-2024_11-50_exp_BiLSTM_IMDB_32_10']; // Sustituye estos nombres por los de tus carpetas
+    const experimentFolders = ['18-10-2024_11-46_exp_LSTM_IMDB_32_10', '18-10-2024_12-05_exp_BiLSTM_IMDB_32_10']; // Sustituye estos nombres por los de tus carpetas
 
     const select = document.getElementById('experiment-select');
     experimentFolders.forEach(folder => {
@@ -148,6 +148,7 @@ async function loadExperimentData() {
         const data = await response.text();
 
         const parsedData = parseExperimentData(data);
+        console.log(parsedData);
         addDataToPlot(parsedData);
     }
 }
